Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -484,6 +484,7 @@ body, h2, .header-div, ul, h1 {
     * {
         padding: 0;
         margin: 0;
+        border: 1px dotted red;
     }
 
     body {
@@ -492,6 +493,7 @@ body, h2, .header-div, ul, h1 {
 
     .header-div {
         width: 100%;
+        height: 50px;
         justify-content: left;
     }
 
@@ -518,6 +520,7 @@ body, h2, .header-div, ul, h1 {
             align-items: center;
             flex-direction: column;
             justify-content: center;
+            text-align: center;
         }
 
     h2 {
@@ -529,7 +532,7 @@ body, h2, .header-div, ul, h1 {
     }
 
         .image-div {
-            margin-top: 20px;
+            margin-top: 10%;
             height: 50%;
             min-width: 80%;
             background-size: contain;
@@ -574,9 +577,8 @@ body, h2, .header-div, ul, h1 {
 
         .logos-wrapper {
             background-color: white;
-            padding-right: 25px;
             border-radius: 5px;
-            width: 90%;
+            width: max-content;
             padding-bottom: 10px;
         }
     
@@ -584,6 +586,7 @@ body, h2, .header-div, ul, h1 {
             display: flex;
             align-items: center;
             flex-direction: row;
+            justify-content: center;
         }
     
         .logos-wrapper ul li {
@@ -591,9 +594,9 @@ body, h2, .header-div, ul, h1 {
             display: flex;
             align-items: center;
             flex-direction: column;
-            margin: 5px;
-            width: 80px;
+            width: 75px;
             color: #212121;
+            font-size: .8rem;
         }
 
     .carousel {
